force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The vendor account</description>
    <inlineHelpText>The vendor account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>Vendor_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>