force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Description__c</fullName>
    <description>A text description of the invoice</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>