force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Override_Vendor_Invoice_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Vendor_Invoice_Exchange_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If not checked, rates at the line level always used rates defined on the system (unless they are themselves overridden).  If checked then all Vendor Invoice Lines used the specified rate (Vendor Exchange Rate Override) as described below.  This will also UN-check the checkbox for line-item-level overrides on all child Vendor Invoice Items:  Apply Item Exchange Rate Override.</description>
    <label>Override Vendor Invoice Exchange Rate</label>
    <type>Checkbox</type>
</CustomField>