force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__SFDC_VAT__c.field-meta.xml
<CustomField>
    <fullName>pse__SFDC_VAT__c</fullName>
    <label>SFDC VAT#</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1234</fullName>
            </value>
            <value>
                <fullName>B4321</fullName>
            </value>
            <value>
                <fullName>C5467</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>