force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the invoice has been submitted for approval</description>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>