force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Total__c.field-meta.xml
<CustomField>
    <fullName>pse__Total__c</fullName>
    <description>The sum of all associated vendor invoice items.</description>
    <label>Total</label>
    <summarizedField>pse__Vendor_Invoice_Item__c.pse__Amount__c</summarizedField>
    <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>