force-app/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Vendor_Currency_Total_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Currency_Total_Number__c</fullName>
    <label>Vendor Currency Total Number</label>
    <summarizedField>pse__Vendor_Invoice_Item__c.pse__Vendor_Currency_Amount_Number__c</summarizedField>
    <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>